<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".Pending_Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:fontFamily="@font/opensansreguler"
        android:text="@string/proses_pendaftaranmu_belum_selesai_yuk_lanjutkan"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20dp" />

    <Button
        android:id="@+id/LanjutRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_login2"
        android:text="@string/lanjutkan"
        android:fontFamily="@font/opensanssemisold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/KeluarRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_login3"
        android:text="@string/keluar"
        android:fontFamily="@font/opensanssemisold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>