<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".OTPsend">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kirim_otp"
            android:textColor="@color/green"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/keteranganOTP"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/sendEmailOtp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_button_login2"
            android:drawableStart="@drawable/ic_gmail"
            android:drawablePadding="-10dp"
            android:fontFamily="@font/mukta"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:text="@string/email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/SendWaOtp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_whatsapp"
            android:background="@drawable/bg_button_login"
            android:text="@string/whatsapp"
            android:foreground="?android:attr/selectableItemBackground"
            android:fontFamily="@font/mukta"
            android:textStyle="bold"
            android:drawablePadding="-10dp"
            android:paddingStart="10dp"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="18dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>