<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">

    <ImageView
        android:id="@+id/logologin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logobarusetianobg"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensanssemisold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberphone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensansreguler"
            android:background="@drawable/bg_edittextlogin"
            android:hint="@string/nomor_telepone"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:textSize="17dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/savecheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:checked="true"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/green" />


            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:fontFamily="@font/opensansreguler"
                android:text="Ingat saya"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressbutton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:visibility="gone"
                android:layout_marginTop="23dp"
                />

            <Button
                android:id="@+id/loginButtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:background="@drawable/bg_button_login2"
                android:fontFamily="@font/opensanssemisold"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/masuk"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:fontFamily="@font/opensanssemisold"
                android:text="@string/tidak_memiliki_akun" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="5dp"
                android:textSize="15dp"
                android:fontFamily="@font/opensanssemisold"
                android:text="@string/daftar"
                android:textColor="@color/green"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>